@@ -10,6 +10,7 @@
 
 #include "xbt_modinter.h"
 #include "xbt/sysdep.h"
+#include "simix/simix.h"
 
 XBT_LOG_EXTERNAL_CATEGORY(xbt);
 XBT_LOG_EXTERNAL_CATEGORY(xbt_sync_rl);
@@ -20,7 +21,9 @@ XBT_LOG_EXTERNAL_CATEGORY(gras_trp_tcp);
 void xbt_context_mod_init(void) {
   XBT_LOG_CONNECT(xbt_sync_rl, xbt);
   XBT_LOG_CONNECT(gras_trp_file, gras_trp);
-  XBT_LOG_CONNECT(gras_trp_tcp, gras_trp);  
+  XBT_LOG_CONNECT(gras_trp_tcp, gras_trp);
 }
-   
+
 void xbt_context_mod_exit(void) {}
+
+void SIMIX_display_process_status(void) {}
